<resources>
    <string name="app_name">Safari Booking</string>
    <string name="s_topic">Book Your Safari</string>
    <string-array name="s_place">
        <item>Yala National Park</item>
        <item>Minneriya National Park</item>
        <item>Wilpaththuwa National Park</item>
    </string-array>
    <string name="s_4Seat">Number of 4 seat vehical</string>
    <string name="s_6Seat">Number of 6 seat vehical</string>
    <string name="s_8Seat">Number of 8 seat vehical</string>
    <string name="s_date">12/03/2021</string>
    <string name="s_bookingBtn">Book Now</string>
    <string name="s_Search">Search by using order ID</string>
    <string name="s_Searchbtn">Search</string>
    <string name="s_place">Place :</string>
    <string name="s_place1">Yala National Park</string>
    <string name="s_4seat">Number of 4 seat vehical :</string>
    <string name="s_4seat1">1</string>
    <string name="s_6seat">Number of 6 seat vehical :</string>
    <string name="s_6seat1">0</string>
    <string name="s_8seat">Number of 8 seat vehical :</string>
    <string name="s_8seat1">2</string>
    <string name="s_delete">Cancel Safari Booking</string>
    <string name="title_activity_go_safarimain">goSafarimain</string>
    <string name="t_topic">Place Your Order Here..</string>
    <string-array name="t_place">
        <item>Yala National Park</item>
        <item>Wilpaththuwa National Park</item>
        <item>Minneriya National Park</item>
    </string-array>
    <string-array name="t_nationalty">
        <item>Local</item>
        <item>Foriegn</item>
    </string-array>
    <string name="avaialble_wil">Wilpaththuwa National Park</string>
    <string name="avaialble_yal">Yala National Park</string>
    <string name="avaialble_min">Minneriya National Park</string>
    <string name="t_fullTicket">Adults(over 15)</string>
    <string name="t_halfTicket">Children( 5-15)</string>
    <string name="t_date">12/03/2021</string>
    <string name="t_booking">Book Now</string>
    <string name="t_searchbtn">Search</string>
    <string name="t_Search">Search by using order ID</string>
    <string name="t_cus_name">Name :</string>
    <string name="t_cus_place">Place :</string>
    <string name="t_cus_nationality">Nationality :</string>
    <string name="t_cus_fullTkt">Full Tiket  :</string>
    <string name="t_cus_halfTkt">Half Ticket :</string>
    <string name="t_cus_date">Date   :</string>
    <string name="t_cus_name1">Kasun Bandara</string>
    <string name="t_cus_place1">Yala National Park</string>
    <string name="t_cus_nationality1">Local</string>
    <string name="t_cus_fullTkt1">5</string>
    <string name="t_cus_halfTkt1">2</string>
    <string name="t_cus_date1">11/17/2021</string>
    <string name="t_delete">Cancel Booking</string>
    <string name="appName">goSafari</string>
    <string name="t_tcktBookingBtn">Book Your Ticket</string>
    <string name="s_safariBookingBtn">Book Your Safari</string>
    <string name="t_previousTktBtn">Search Your Previous Ticket Bookings</string>
    <string name="s_previousSafaribtn">Search Your Previous Safari Bookings</string>
    <string name="feedBacktxt">We will really appreciate that if you rate us now.</string>
    <string name="feedbackBtn">Rate Us</string>
    <string name="t_DeleteBtn">Delete</string>


    <string name="d_topicLogin">Login</string>
    <string name="d_loginname">UserName</string>
    <string name="d_loginpassword">Password</string>
    <string name="d_c_loginpassword">Confirm Password</string>
    <string name="d_loginfb">Facebook</string>
    <string name="d_loginggle">Google</string>
    <string name="d_forget">Forgot password?</string>
    <string name="d_loginBtn">Login</string>
    <string name="d_forgettxt">Dont have an Account?</string>
    <string name="d_signup">Signup</string>
    <string name="d_topicReg">Registration</string>
    <string name="d_regBtn">Register</string>
    <string name="d_email">Email</string>
    <string name="d_contact">Contact Number</string>
    <string name="d_feedback">Feedback</string>
    <string name="d_feedbackname">Kasun Bandara</string>
    <string name="d_cmmnt">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="d_cmmntyou">Comment here....</string>
    <string name="d_feebackbtn">Send Feedback</string>
    <string name="d_delfeebackbtn">Delete Feedback</string>

    <string name="d_register">Already Registered?</string>
    <string name="d_loginhere">Login Here</string>
    <string name="logoutBtn">Logout</string>
    <string name="d_loginaddress">Email Address</string>

    <string name="validation">Pleace check your Date</string>
    <string name="forget_topic">Forget Password</string>
    <string name="userLogout">Logout</string>
    <string name="Price_list">Check Rates</string>
    <string name="tab_nationalty">Nationality</string>
    <string name="tab_child">Child</string>
    <string name="tab_adult">Adult</string>
    <string name="tab_local">Local</string>
    <string name="tab_foriegn">Foriegn</string>
    <string name="tb_vehicle">Vehicle</string>
    <string name="tb_v_rates">Price</string>
    <string name="tb_v_avail">Available</string>
    <string name="tb_v_4seat">4 Seat</string>
    <string name="tb_v_6seat">6 Seat</string>
    <string name="tb_v_8seat">8 Seat</string>
    <string name="list_park">Park</string>
    <string name="list_nationality">Nationality</string>
    <string name="list_adults">Adults</string>
    <string name="list_amount">Amount</string>
    <string name="list_child">Children</string>
    <string name="list_tot">Total Amount</string>
    <string name="list_date">Date</string>
    <string name="list_4seat">4 Seat vehicles</string>
    <string name="list_6seat">6 Seat vehicles</string>
    <string name="list_8seat">8 Seat vehicles</string>
    <string name="list_tot_vehi">Total Vehicles</string>
    <string name = "list_u_id">UserID</string>
    <string name = "price_chrt">Price Chart(LKR)</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->


</resources>