<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D4910"
    tools:context=".viewTicketBooking">

    <EditText
        android:id="@+id/t_searchInpt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/t_input_bg"
        android:drawableLeft="@drawable/t_ic__search"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/t_Search"
        android:textColor="#FBFBFB"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/t_searchbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/t_searchbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/t_input_bg"
        android:padding="10dp"
        android:text="@string/t_searchbtn"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/t_searchInpt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/t_searchInpt" />

    <TextView
        android:id="@+id/t_cus_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/t_cus_name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/t_cus_name1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_searchInpt" />

    <TextView
        android:id="@+id/t_cus_name1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/t_cus_name1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/t_cus_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/t_cus_name" />

    <TextView
        android:id="@+id/t_cus_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/t_cus_place"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/t_cus_place1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_cus_name" />

    <TextView
        android:id="@+id/t_cus_place1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/t_cus_place1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/t_cus_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/t_cus_place" />

    <TextView
        android:id="@+id/t_cus_nationality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/t_cus_nationality"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/t_cus_nationality1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_cus_place" />

    <TextView
        android:id="@+id/t_cus_nationality1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/t_cus_nationality1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/t_cus_nationality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/t_cus_nationality" />

    <TextView
        android:id="@+id/t_cus_fullTkt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/t_cus_fullTkt"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/t_cus_fullTkt1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_cus_nationality" />

    <TextView
        android:id="@+id/t_cus_fullTkt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/t_cus_fullTkt1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/t_cus_fullTkt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/t_cus_fullTkt" />

    <TextView
        android:id="@+id/t_cus_halfTkt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/t_cus_halfTkt"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/t_cus_half1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_cus_fullTkt" />

    <TextView
        android:id="@+id/t_cus_half1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/t_cus_halfTkt1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/t_cus_halfTkt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/t_cus_halfTkt" />

    <TextView
        android:id="@+id/t_cus_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/t_cus_date"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/t_cus_date1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_cus_halfTkt" />

    <TextView
        android:id="@+id/t_cus_date1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/t_cus_date1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/t_cus_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/t_cus_date" />

    <Button
        android:id="@+id/t_canclBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/t_btn_bg"
        android:text="@string/t_delete"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/t_cus_date1"
        app:layout_constraintStart_toStartOf="@+id/t_cus_date"
        app:layout_constraintTop_toBottomOf="@+id/t_cus_date1" />

</androidx.constraintlayout.widget.ConstraintLayout>